cros: Show Powerwash button in case of a fatal demo setup error

Bug: 871412
Change-Id: I5bf054ed6ef4c927253fbad4fe09ec674cc58d39
Reviewed-on: https://chromium-review.googlesource.com/c/1310559
Reviewed-by: Aga Wronska <agawronska@chromium.org>
Reviewed-by: Alexander Alekseev <alemate@chromium.org>
Commit-Queue: Wenzhao (Colin) Zang <wzang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#605256}
Former-commit-id: 919287d0a1eda09af61b4115352269a1d256617b