chrome/browser/chromeos/login/screens/demo_setup_screen.cc
@@ -8,11 +8,14 @@
 #include "chrome/browser/chromeos/login/screens/base_screen_delegate.h"
 #include "chrome/browser/chromeos/login/screens/demo_setup_screen_view.h"
 #include "chrome/browser/chromeos/login/wizard_controller.h"
+#include "chromeos/dbus/dbus_thread_manager.h"
+#include "chromeos/dbus/session_manager_client.h"
 
 namespace {
 
 constexpr char kUserActionStartSetup[] = "start-setup";
 constexpr char kUserActionClose[] = "close-setup";
+constexpr char kUserActionPowerwash[] = "powerwash";
 
 }  // namespace
 
@@ -47,6 +50,10 @@ void DemoSetupScreen::OnUserAction(const std::string& action_id) {
     StartEnrollment();
   } else if (action_id == kUserActionClose) {
     Finish(ScreenExitCode::DEMO_MODE_SETUP_CANCELED);
+  } else if (action_id == kUserActionPowerwash) {
+    chromeos::DBusThreadManager::Get()
+        ->GetSessionManagerClient()
+        ->StartDeviceWipe();
   } else {
     BaseScreen::OnUserAction(action_id);
   }
