chrome/browser/ui/webui/chromeos/login/demo_setup_screen_handler.cc
@@ -43,10 +43,13 @@ void DemoSetupScreenHandler::Bind(DemoSetupScreen* screen) {
 
 void DemoSetupScreenHandler::OnSetupFailed(
     const DemoSetupController::DemoSetupError& error) {
+  // TODO(wzang): Consider customization for RecoveryMethod::kReboot as well.
   CallJS("onSetupFailed",
          base::JoinString({error.GetLocalizedErrorMessage(),
                            error.GetLocalizedRecoveryMessage()},
-                          base::UTF8ToUTF16(" ")));
+                          base::UTF8ToUTF16(" ")),
+         error.recovery_method() ==
+             DemoSetupController::DemoSetupError::RecoveryMethod::kPowerwash);
 }
 
 void DemoSetupScreenHandler::OnSetupSucceeded() {
@@ -63,6 +66,8 @@ void DemoSetupScreenHandler::DeclareLocalizedValues(
                IDS_OOBE_DEMO_SETUP_ERROR_SCREEN_TITLE);
   builder->Add("demoSetupErrorScreenRetryButtonLabel",
                IDS_OOBE_DEMO_SETUP_ERROR_SCREEN_RETRY_BUTTON_LABEL);
+  builder->Add("demoSetupErrorScreenPowerwashButtonLabel",
+               IDS_LOCAL_STATE_ERROR_POWERWASH_BUTTON);
 }
 
 }  // namespace chromeos
